--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -538,7 +538,7 @@ Key bindings configuration module automatically tangled in =./lisp/setup-keys.el
 
 
 ** Global Key Bindings
-Emacs Global Bindings are redefined here.
+Some Emacs Global Bindings are redefined here.
 #+begin_src emacs-lisp
   ;; Unbind unneeded keys
   (global-set-key (kbd "C-z") nil)
@@ -567,16 +567,46 @@ Emacs Global Bindings are redefined here.
   (global-set-key (kbd "<f5>") #'revert-buffer)
 
 #+end_src
-** Personal keyboard map
+** My Personal Key Bindings
 My map
 #+begin_src emacs-lisp
+  ;; deprecated
   (bind-keys
-   :prefix-map nc-map
-   :prefix-docstring "Prefix for personal key bindings"
-   :prefix "C-c C-SPC"
-   ;; 2013-03-31: http://stackoverflow.com/questions/3124844/what-are-your-favorite-global-key-bindings-in-emacs
-   (";" . nc/goto-emacs-config))
+     :prefix-map nc-map
+     :prefix-docstring "Prefix for personal key bindings"
+     :prefix "C-c C-SPC"
+     ;; 2013-03-31: http://stackoverflow.com/questions/3124844/what-are-your-favorite-global-key-bindings-in-emacs
+     (";" . nc/goto-emacs-config))
+
+  (defcustom nc-prefix "C-c C-SPC"
+    "Prefix for all personal keybinds."
+    :type 'string
+    :group 'nc-emacs)
+
 #+end_src
+*** Notes Keys
+
+#+begin_src emacs-lisp
+  (bind-keys :prefix-map nc--notes-keys
+               :prefix (concat nc-prefix " n")
+               ("i" . nc/goto-inbox)
+               ("j" . nc/goto-journal-file)
+               ("p" . nc/goto-my-credentials)
+               ("N" . nc/goto-notes-dir)
+               ("A" . nc/goto-archives-dir)
+               ("T" . nc/goto-templates-dir)             
+               ("t" . org-roam-buffer-toggle))
+#+end_src
+*** Toggle Keys
+
+#+begin_src emacs-lisp
+  (bind-keys :prefix-map nc--toggle-keys
+               :prefix (concat nc-prefix " t")
+               ("e" . eshell-toggle)
+               ("v" . vterm-toggle)             
+               ("t" . treemacs))
+#+end_src
+
 ** Key Chords
 
 #+begin_src emacs-lisp
@@ -1021,7 +1051,6 @@ https://github.com/Alexander-Miller/treemacs
 
       (treemacs-hide-gitignored-files-mode nil))
     :bind
-    (:map nc-map ("t" . treemacs))
     (:map global-map
           ("M-o"       . treemacs-select-window)
           ("C-x t 1"   . treemacs-delete-other-windows)
@@ -1478,8 +1507,8 @@ Change priorities colors
 
      (defconst nc/org-default-projects-dir (concat org-directory "/projects"))
      (defconst nc/org-default-projects-file (concat org-directory "/projects.org"))
-     (defconst nc/org-default-resources-dir (concat org-directory "/resources"))
      (defconst nc/org-default-archives-dir (concat org-directory "/archives"))
+     (defconst nc/org-default-templates-dir (concat org-directory "/templates"))
      (defconst nc/org-default-personal-dir (concat org-directory "/personal"))
      (defconst nc/org-default-completed-dir (concat org-directory "/projects/_completed"))
      (defconst nc/org-journal-dir (concat org-directory "/journal"))
@@ -1503,26 +1532,17 @@ Change priorities colors
        (re-search-forward "* Inbox")
        (beginning-of-line))
 
-     (bind-key "gi" 'nc/goto-inbox nc-map)
-
      (defun nc/goto-notes-dir ()
        (interactive)
        (dired org-directory))
-
-     (bind-key "gN" 'nc/goto-notes-dir nc-map)
-
-     (defun nc/goto-resources-dir ()
-       (interactive)
-       (dired nc/org-default-resources-dir))
-
-     (bind-key "gR" 'nc/goto-resources-dir nc-map)
 
      (defun nc/goto-archives-dir ()
        (interactive)
        (dired nc/org-default-archives-dir))
 
-     (bind-key "gA" 'nc/goto-archives-dir nc-map)
-
+     (defun nc/goto-templates-dir ()
+       (interactive)
+       (dired nc/org-default-templates-dir))
    )
  #+end_src
 
@@ -1543,9 +1563,6 @@ Change priorities colors
            (expand-file-name (concat nc/org-journal-dir "/" daily-name ".org"))))
 
    (setq org-default-notes-file (nc--get-journal-file-today))
-
-   (bind-key "gj" 'nc/goto-journal-file nc-map)
-   (bind-key "j" 'nc/goto-journal-file nc-map)
  #+end_src
 
 
@@ -1557,7 +1574,7 @@ Insert daily heading in journal file =C-<-o-d=
            (yas-expand-snippet (buffer-string) (point-min) (point-max)))
 
          (setq auto-insert 'other
-               auto-insert-directory (concat org-directory "/templates"))
+               auto-insert-directory nc/org-default-templates-dir)
 
          (define-auto-insert "\\.org\\'" ["week.org" nc--autoinsert-yas-expand])
 
@@ -1578,7 +1595,7 @@ Insert daily heading in journal file =C-<-o-d=
 
              ;; Insert dailies that only happen once a week:
              (let ((weekday-template (downcase
-                                      (format-time-string "templates/journal-%A.org"))))
+                                      (concat nc/org-default-templates-dir (format-time-string "/journal/%A.org")))))
                (when (file-exists-p weekday-template)
                  (insert-file-contents weekday-template)))
 
@@ -2765,9 +2782,7 @@ Last emacs terminal emulator :  https://github.com/akermu/emacs-libvterm
                    (reusable-frames . visible)
                    (window-height . 0.3)))
     :bind
-    (:map nc-map
-          ("$" . vterm-toggle)
-          :map vterm-mode-map
+    (:map vterm-mode-map
           ("C-<return>" . vterm-toggle-insert-cd)
           ("C-S-n" . vterm-toggle-forward)
           ("C-S-p" . vterm-toggle-backward)
@@ -2903,10 +2918,6 @@ Adapted from https://config.daviwil.com/emacs#eshell
 
 #+begin_src emacs-lisp
   (use-package eshell-toggle
-    :bind
-    (:map nc-map
-          ("C-e" . eshell-toggle)
-          ("e" . eshell-toggle))
     :custom
     (eshell-toggle-size-fraction 3)
     (eshell-toggle-use-projectile-root t)
@@ -2942,8 +2953,6 @@ Custom functions module automatically tangled in =./lisp/setup-functions.el=
       ;; before disable super-save-mode
       ;;(super-save-stop)
       (find-file (concat nc/org-default-personal-dir "/password.gpg")))
-
-  (bind-key "gp" 'nc/goto-my-credentials nc-map)
 #+end_src
 
 
