--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -568,10 +568,9 @@ Some Emacs Global Bindings are redefined here.
   (global-set-key (kbd "<f5>") #'revert-buffer)
 
   ;; Tools alt-[0-9]
-  (global-set-key (kbd "M-0") #'nc/toggle-split-window-vertically)
+  (global-set-key (kbd "M-0") #'treemacs-select-window)
   (global-set-key (kbd "M-1") #'vterm-toggle)
   (global-set-key (kbd "M-2") #'eshell-toggle)
-
   (global-set-key (kbd "M-5") #'magit-status)
   (global-set-key (kbd "M-6") #'magit-log-buffer-file)
 
@@ -1124,10 +1123,10 @@ https://github.com/Alexander-Miller/treemacs
       (treemacs-hide-gitignored-files-mode nil))
     :bind
     (:map global-map
-          ("M-o"       . treemacs-select-window)
+          ("<f6>" . treemacs)
+          ("C-<f6>" . treemacs-select-window)
           ("C-x t 1"   . treemacs-delete-other-windows)
           ("C-x t t"   . treemacs)
-          ("C-x C-p"   . treemacs)
           ("C-x t B"   . treemacs-bookmark)
           ("C-x t C-t" . treemacs-find-file)
           ("C-x t M-t" . treemacs-find-tag)))
