--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -566,13 +566,18 @@ Some Emacs Global Bindings are redefined here.
 
   ;; Functions
   (global-set-key (kbd "<f5>") #'revert-buffer)
+  (global-set-key (kbd "<f6>") #'treemacs)
+  (global-set-key (kbd "<f9>") #'my/capture-interruption-task)
+  (global-set-key (kbd "<f11>") #' nc/toggle-split-window-vertically)
+  (global-set-key (kbd "C-<f11>") #'nc/toggle-split-window-horizontally)
+  (global-set-key (kbd "<f12>") #'org-agenda)
 
   ;; Tools alt-[0-9]
-  (global-set-key (kbd "M-0") #'treemacs-select-window)
+  (global-set-key (kbd "M-0") #'nc/toggle-split-window-vertically)
   (global-set-key (kbd "M-1") #'vterm-toggle)
   (global-set-key (kbd "M-2") #'eshell-toggle)
-  
-  (global-set-key (kbd "M-6") #'magit-log-buffer-file)
+  (global-set-key (kbd "M-5") #'magit-log-buffer-file)
+  (global-set-key (kbd "M-6") #'treemacs-select-window)
 
 #+end_src
 ** Hydra
@@ -586,7 +591,7 @@ Some Emacs Global Bindings are redefined here.
   (use-package major-mode-hydra
     :ensure t
     :bind
-    ("C-c C-SPC" . major-mode-hydra))
+    ("C-< SPC" . major-mode-hydra))
 
   ;; Pretty Hydra
   (use-package pretty-hydra
@@ -794,9 +799,6 @@ Bound to =<my-prefix-map> w h=.
             (set-window-buffer (next-window) next-win-buffer)
             (select-window first-win)
             (if this-win-2nd (other-window 1))))))
-
-
-  (bind-key "C-<f11>" 'nc/toggle-split-window-horizontally)
 #+end_src
 
 
@@ -813,8 +815,6 @@ If windows are splitted delete other windows.
     (if (> (count-windows) 1)
         (delete-other-windows)
       (nc--split-window-right-and-move-there-dammit)))
-
-  (bind-key "<f11>" 'nc/toggle-split-window-vertically)
   #+end_src
 
 
@@ -1123,8 +1123,6 @@ https://github.com/Alexander-Miller/treemacs
       (treemacs-hide-gitignored-files-mode nil))
     :bind
     (:map global-map
-          ("<f6>" . treemacs)
-          ("C-<f6>" . treemacs-select-window)
           ("C-x t 1"   . treemacs-delete-other-windows)
           ("C-x t t"   . treemacs)
           ("C-x t B"   . treemacs-bookmark)
@@ -1449,7 +1447,6 @@ Org mode configuration automatically tangled in =./lisp/setup-org.el=
     :bind (("C-c l" . org-store-link)
            ("C-c c" . org-capture)
            ("C-c a" . org-agenda)
-           ("<f12>" . org-agenda)
            ("C-c C-b" . org-iswitchb))
 
     :config
@@ -1853,9 +1850,6 @@ will appear as projects.
        "Interrupted Task"
        (interactive)
        (org-capture 4 "i"))
-
-   ;; Override the key definition
-   (global-set-key (kbd "<f9>") 'my/capture-interruption-task)
  #+end_src
 *** New project
 I have my own template for creating new projects
