Fix Key Bindings

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -589,9 +589,7 @@ Some Emacs Global Bindings are redefined here.
     (hydra-default-hint nil))
 
   (use-package major-mode-hydra
-    :ensure t
-    :bind
-    ("C-< SPC" . major-mode-hydra))
+    :ensure t)
 
   ;; Pretty Hydra
   (use-package pretty-hydra
@@ -610,7 +608,6 @@ Some Emacs Global Bindings are redefined here.
      (("y" consult-yasnippet "Yasnippet")
       ("Y" yankpad-insert "Yankpad"))))
 #+end_src
-
 
 *** nc-hydra-goto 
 #+begin_src emacs-lisp
@@ -684,6 +681,7 @@ My map
      :prefix nc-prefix
    ;; 2013-03-31: http://stackoverflow.com/questions/3124844/what-are-your-favorite-global-key-bindings-in-emacs
      (";" . nc/goto-emacs-config)
+     ("SPC" . major-mode-hydra)
      (":"  . avy-goto-char-timer)
      ("i" . nc-hydra-insert/body)
      ("g" . nc-hydra-goto/body)
@@ -1163,7 +1161,10 @@ Snippets for programming.
 
 Consult integration
 #+begin_src emacs-lisp
-  (use-package consult-yasnippet)
+  (use-package consult-yasnippet
+    :bind
+    (:map global-map
+     ("C-c y" . consult-yasnippet)))
 #+end_src
 
 * Completion
