--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -568,12 +568,12 @@ Some Emacs Global Bindings are redefined here.
   (global-set-key (kbd "<f5>") #'revert-buffer)
   (global-set-key (kbd "<f6>") #'treemacs)
   (global-set-key (kbd "<f9>") #'my/capture-interruption-task)
-  (global-set-key (kbd "<f11>") #' nc/toggle-split-window-vertically)
-  (global-set-key (kbd "C-<f11>") #'nc/toggle-split-window-horizontally)
+  (global-set-key (kbd "<f11>") #' nc/maximize-or-split-window-vertically)
+  (global-set-key (kbd "C-<f11>") #'nc/split-window-horizontally)
   (global-set-key (kbd "<f12>") #'org-agenda)
 
   ;; Tools alt-[0-9]
-  (global-set-key (kbd "M-0") #'nc/toggle-split-window-vertically)
+  (global-set-key (kbd "M-0") #'nc/maximize-or-split-window-vertically)
   (global-set-key (kbd "M-1") #'vterm-toggle)
   (global-set-key (kbd "M-2") #'eshell-toggle)
   (global-set-key (kbd "M-5") #'magit-log-buffer-file)
@@ -650,8 +650,8 @@ Some Emacs Global Bindings are redefined here.
   (pretty-hydra-define nc-hydra-windows
       (:color amaranth :quit-key "q" :title "Windows" :exit t)
       ("Move"
-       (("v" nc/toggle-split-window-vertically "Split Window Right")
-        ("h" nc/toggle-split-window-horizontally "Split Window Horizontally"))))
+       (("v" nc/maximize-or-split-window-vertically "Maximize or Split Window V")
+        ("h" nc/split-window-horizontally "Split Window H"))))
 #+end_src
 
 *** hydra org-mode
@@ -769,11 +769,11 @@ Windows configuration module automatically tangled in =./lisp/setup-windows.el=
  #+end_src
 
 
-** Toggle Window Split Horizontally
+** Split Window Horizontally
 
 Bound to =<my-prefix-map> w h=.
 #+begin_src emacs-lisp
-  (defun nc/toggle-split-window-horizontally ()
+  (defun nc/split-window-horizontally ()
     (interactive)
     (if (= (count-windows) 2)
         (let* ((this-win-buffer (window-buffer))
@@ -800,7 +800,7 @@ Bound to =<my-prefix-map> w h=.
 #+end_src
 
 
-** Toggle Window Split Vertically 
+** Maximize or Split Window Vertically 
 Split window right with =<my-prefix-map> w v= and move there.
 If windows are splitted delete other windows.
 #+begin_src emacs-lisp
@@ -808,7 +808,7 @@ If windows are splitted delete other windows.
     (split-window-right)
     (windmove-right))
 
-  (defun nc/toggle-split-window-vertically ()
+  (defun nc/maximize-or-split-window-vertically ()
     (interactive)
     (if (> (count-windows) 1)
         (delete-other-windows)
