[emacs][macos] Configure trash directory

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -355,6 +355,8 @@ Some custom preferences dedicated to MacOS
      (setq mac-control-modifier 'control) ; make Control key do Control
      (setq ns-function-modifier 'hyper)   ; make Fn key do Hyper
 
+     (setq trash-directory "~/.Trash")    ; Trash Directory
+  
      ;; Write Symbols [{}]
      (setq-default mac-right-option-modifier nil)
 
