[emacs][lsp] LSP Optimization

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2586,7 +2586,6 @@ Programming configuration module automatically tangled in =./lisp/setup-programm
           lsp-lens-enable t
           lsp-semantic-tokens-enable t
 
-
           lsp-headerline-breadcrumb-enable nil ;; disable breadcrumb
 
 
@@ -2602,7 +2601,8 @@ Programming configuration module automatically tangled in =./lisp/setup-programm
   (use-package lsp-ui
     :commands lsp-ui-mode
     :init
-    (setq lsp-ui-doc-alignment 'at-point
+    (setq lsp-ui-doc-alignment 'frame
+          lsp-ui-doc-position  'bottom
           lsp-ui-doc-use-childframe nil)
     :config
       ;; WORKAROUND Hide mode-line of the lsp-ui-imenu buffer
